Change key persistance provider
